21-networkPolicy/ns-backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    type: backend
