21-networkPolicy/ns-frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    type: frontend
