21-networkPolicy/ns-production.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    type: production
