21-networkPolicy/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: busybox
  namespace: frontend
spec:
  terminationGracePeriodSeconds: 5
  containers:
  - name: busybox
    image: busybox:stable-uclibc
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    command: ["sleep", "3600"]
  
# kubectl get po -n frontend
# kubectl exec -it -n frontend busybox -- sh
# wget -qO- http://nginx-svc.backend:3000
# wget -qO- http://spring.production:2000
# nslookup nginx-svc.backend
